--- a/eProject/Views/Shared/Partials/Header.cshtml
+++ b/eProject/Views/Shared/Partials/Header.cshtml
@@ -18,11 +18,13 @@
             </nav>
 
             <nav class="header-userNav">
-                <a class="header-userNavItem" href="/">
-                    Login
+                <a class="header-userNavItem" href="/Account/Login">
+                    <i class="fa-solid fa-right-to-bracket"></i>
+                    Sign In
                 </a>
-                <a class="header-userNavItem" href="/">
-                    Register
+                <a class="header-userNavItem" href="/Account/Register">
+                    <i class="fa-solid fa-user-plus"></i>
+                    Sign Up
                 </a>
             </nav>
         </div>
