--- a/eProject/Views/Site/Index.cshtml
+++ b/eProject/Views/Site/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Home Page";
 }
 @section styles {
     <link rel="stylesheet" href="~/Content/Css/Site/Index.css" />
