Make contact page
Make simple contact page hasn't validation, model and update after

--- a/eProject/Content/App.css
+++ b/eProject/Content/App.css
@@ -92,3 +92,12 @@ body {
     margin-top: var(--header-height);
     padding: 24px 0;
 }
+
+.copyrightText {
+    font-size: 1.6rem;
+    color: #666;
+    margin-top: 24px;
+}
+.copyrightText i {
+    color: #666;
+}
