--- a/eProject/Views/Shared/Partials/Footer.cshtml
+++ b/eProject/Views/Shared/Partials/Footer.cshtml
@@ -34,6 +34,12 @@
                     </a>
                 </div>
             </div>
+            <div class="row">
+                <p class="copyrightText">
+                    <i class="fa-solid fa-copyright"></i>
+                    Nexus Communication System 2023. All rights reserved.
+                </p>
+            </div>
         </div>
     </div>
 </div>
