--- a/eProject/Views/Shared/Partials/Header.cshtml
+++ b/eProject/Views/Shared/Partials/Header.cshtml
@@ -9,7 +9,7 @@
                 <a class="header-navItem" href="/">
                     Home
                 </a>
-                <a class="header-navItem" href="/">
+                <a class="header-navItem" href="/Contact">
                     Contact
                 </a>
                 <a class="header-navItem" href="/">
