--- a/eProject/Content/Css/Account/Login.css
+++ b/eProject/Content/Css/Account/Login.css
@@ -7,7 +7,7 @@
 
 .formBox {
     background-color: #303030;
-    border: 1px solid #555;
+    box-shadow: 0 0 20px #88888855;
     border-radius: 8px;
     padding: 24px;
 }
