--- a/eProject/Views/Shared/Partials/Footer.cshtml
+++ b/eProject/Views/Shared/Partials/Footer.cshtml
@@ -23,7 +23,7 @@
                     <h3 class="footer-heading">
                         Need Helps
                     </h3>
-                    <a class="footer-lineLink" href="tel:0121685741">
+                    <a class="footer-lineLink" href="~/Site/Faq">
                         FAQ
                     </a>
                     <a class="footer-lineLink" href="nexusservice@("@")gmail.com">
