--- a/eProject/Views/Shared/Partials/Footer.cshtml
+++ b/eProject/Views/Shared/Partials/Footer.cshtml
@@ -26,7 +26,7 @@
                     <a class="footer-lineLink" href="tel:0121685741">
                         FAQ
                     </a>
-                    <a class="footer-lineLink" href="nexusservice@("@")gmail.com">
+                    <a class="footer-lineLink" href="~/Site/HowToOrderAService">
                         How to order a service
                     </a>
                     <a class="footer-lineLink" href="nexusservice@("@")gmail.com">
