--- a/eProject/Views/Site/HowToOrderAService.cshtml
+++ b/eProject/Views/Site/HowToOrderAService.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "HowToOrderAService";
+    ViewBag.Title = "How To Order A Service";
 }
 @section styles {
     <link rel="stylesheet" href="~/Content/Css/Site/HowToOrderService.css" />
@@ -22,7 +22,7 @@
                 Email: nexusservice@gmail.com
                 <h3 class="pd-12">Step 2: Register to install a package or service:</h3>
                 Please provide the following complete information:<br />
-                <ul>
+                <ul class="fw300">
                     <li>Full name</li>
                     <li>Birthday</li>
                     <li>Phone number</li>
@@ -33,9 +33,11 @@
                 </ul>
                 Staff at the retail store will record your registration information into the system.
                 <h3 class="pd-12">Step 3: Terms and payment method:</h3>
-                Invoices will be updated on the system so that you can access them through the web.
-                The payment details will be clearly updated by the system on the amount paid and the amount due.<br />
-                You can pay directly or by card at the retail store.
+                <span>
+                    Invoices will be updated on the system so that you can access them through the web.
+                    The payment details will be clearly updated by the system on the amount paid and the amount due.<br />
+                    You can pay directly or by card at the retail store.
+                </span>
             </div>
         </div>
     </div>
