--- a/eProject/Content/Css/Contact/Index.css
+++ b/eProject/Content/Css/Contact/Index.css
@@ -66,3 +66,31 @@
 .form-btn:hover {
     opacity: .8;
 }
+
+.invalidMessage {
+    font-size: 1.6rem;
+    color: red;
+    animation: ringring ease-out .3s;
+}
+
+@keyframes ringring {
+    0% {
+        margin-left: 0;
+    }
+
+    25% {
+        margin-left: 10px;
+    }
+
+    50% {
+        margin-left: -10px;
+    }
+
+    75% {
+        margin-left: 10px;
+    }
+
+    100% {
+        margin-left: -10px;
+    }
+}
