--- a/eProject/Views/Shared/Partials/Header.cshtml
+++ b/eProject/Views/Shared/Partials/Header.cshtml
@@ -1,4 +1,6 @@
-﻿<header class="header">
+﻿@using eProject.Auth
+
+<header class="header">
     <div class="container" style="height: 100%">
         <div class="header-container">
             <a class="header-logoLink" href="/">
@@ -18,14 +20,28 @@
             </nav>
 
             <nav class="header-userNav">
-                <a class="header-userNavItem" href="/Account/Login">
-                    <i class="fa-solid fa-right-to-bracket"></i>
-                    Sign In
-                </a>
-                <a class="header-userNavItem" href="/Account/Register">
-                    <i class="fa-solid fa-user-plus"></i>
-                    Sign Up
-                </a>
+                @if (!AuthManager.IsCustomerAuthenticated)
+                {
+                    <a class="header-userNavItem" href="/Customer/Login">
+                        <i class="fa-solid fa-right-to-bracket"></i>
+                        Sign In
+                    </a>
+                    <a class="header-userNavItem" href="/Customer/Register">
+                        <i class="fa-solid fa-user-plus"></i>
+                        Sign Up
+                    </a>
+                }
+                else
+                {
+                    <a class="header-userNavItem" href="/Customer/Profile">
+                        <i class="fa-solid fa-address-card"></i>
+                        Profile
+                    </a>
+                    <a class="header-userNavItem" href="/Customer/SignOut">
+                        <i class="fa-solid fa-door-open"></i>
+                        Sign Out
+                    </a>
+                }
             </nav>
         </div>
     </div>
