--- a/eProject/Views/Shared/_Layout.cshtml
+++ b/eProject/Views/Shared/_Layout.cshtml
@@ -10,27 +10,70 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     @* Styles *@
     <link rel="stylesheet" href="~/Content/App.css" />
+    @* Toast Message *@
+    <link rel="stylesheet" href="~/Content/Libraries/ToastMessage/ToastMessage.css" />
     @RenderSection("styles", required: false)
 </head>
 <body>
     <div id="app">
-        @{ 
+        @{
             Html.RenderPartial("~/Views/Shared/Partials/Header.cshtml");
         }
         <div class="content">
             @RenderBody()
         </div>
-        @{ 
+        @{
             Html.RenderPartial("~/Views/Shared/Partials/Footer.cshtml");
         }
     </div>
-    
+
+    <div id="toast"></div>
+
 
     @* BS5 *@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@("@")popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    @* Toast Message *@
+    <script src="~/Content/Libraries/ToastMessage/ToastMessage.js"></script>
     @* Scripts *@
     @RenderSection("scripts", required: false)
+
+    @* Toast Handle *@
+    @try
+    {
+        if (TempData.ContainsKey("Error"))
+        {
+            <script>
+                toast({
+                    title: 'Error',
+                    message: '@TempData["Error"].ToString()',
+                    type: 'error'
+                })
+            </script>
+        }
+    }
+    catch (Exception e)
+    {
+        throw e;
+    }
+    @try
+    {
+        if (TempData.ContainsKey("Success"))
+        {
+            <script>
+                toast({
+                    title: 'Success',
+                    message: '@TempData["Success"].ToString()',
+                    type: 'success'
+                })
+            </script>
+        }
+    }
+    catch (Exception e)
+    {
+        throw e;
+    }
+    @RenderSection("toast", required: false)
 </body>
 </html>
