--- a/eProject/Views/Site/Index.cshtml
+++ b/eProject/Views/Site/Index.cshtml
@@ -20,7 +20,7 @@
             What makes customers always trust and use Nexus service?
         </h1>
 
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-xl-4">
                 <img src="~/Content/Images/demo2.png" alt="Img section" style="width: 100%" />
             </div>
@@ -33,6 +33,163 @@
     </div>
 
     <div class="content-section">
+        <h1 class="content-sectionTitle">
+            <i class="fa-solid fa-globe"></i>
+            Current Nexus services
+        </h1>
+
+        <div class="serviceItem">
+            <div class="row">
+                <div class="col-xl-4">
+                    <img style="width: 100%;" class="serviceItem-thumbnail" src="~/Content/Images/demo.jpg" alt="Service Thumbnail" />
+                </div>
+                <div class="col-xl-8">
+                    <h2 class="serviceItem-name">
+                        Dial-up
+                    </h2>
+                    <p class="serviceItem-summary">
+                        A dial-up connection is established when two or more communication devices use a public switched telephone network (PSTN) to connect to an Internet service provider (ISP).
+                    </p>
+                    <p class="serviceItem-deposit">
+                        With a deposit of <span class="serviceItem-depositValue">325$</span>
+                    </p>
+                    <a href="/" class="serviceItem-detailBtn">
+                        View Detail
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="serviceItem">
+            <div class="row">
+                <div class="col-xl-4">
+                    <img style="width: 100%;" class="serviceItem-thumbnail" src="~/Content/Images/demo.jpg" alt="Service Thumbnail" />
+                </div>
+                <div class="col-xl-8">
+                    <h2 class="serviceItem-name">
+                        Broadband
+                    </h2>
+                    <p class="serviceItem-summary">
+                        The term broadband commonly refers to high-speed Internet access that is always on and faster than the traditional dial-up access. Broadband includes several high-speed transmission technologies such as: Digital Subscriber Line (DSL) Cable Modem. Fiber.
+                    </p>
+                    <p class="serviceItem-deposit">
+                        With a deposit of <span class="serviceItem-depositValue">500$</span>
+                    </p>
+                    <a href="/" class="serviceItem-detailBtn">
+                        View Detail
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="serviceItem">
+            <div class="row">
+                <div class="col-xl-4">
+                    <img style="width: 100%;" class="serviceItem-thumbnail" src="~/Content/Images/demo.jpg" alt="Service Thumbnail" />
+                </div>
+                <div class="col-xl-8">
+                    <h2 class="serviceItem-name">
+                        Landline
+                    </h2>
+                    <p class="serviceItem-summary">
+                        A Digital Subscriber Line (DSL) broadband connection uses the wiring placed for phone services to provide Internet access for your home or business.
+                    </p>
+                    <p class="serviceItem-deposit">
+                        With a deposit of <span class="serviceItem-depositValue">250$</span>
+                    </p>
+                    <a href="/" class="serviceItem-detailBtn">
+                        View Detail
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="content-section">
+        <h1 class="content-sectionTitle">
+            <i class="fa-solid fa-question"></i>
+            Reasons why you should use our service
+        </h1>
+
+        <div class="reasons">
+            <div class="row">
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="reasonItem">
+                        <i class="fa-regular fa-square-check"></i>
+                        This is reason item
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    @*<div class="content-section">
         <h1 class="content-sectionTitle">
             Attractive Dial-up Packages
         </h1>
@@ -175,6 +332,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 </div>
 
