--- a/eProject/Views/Site/Faq.cshtml
+++ b/eProject/Views/Site/Faq.cshtml
@@ -75,7 +75,21 @@
     </div>
 
     <div class="col">
-
+        <details>
+            <summary>
+                Why can't I sign in?
+            </summary>
+            <br />
+            <div>
+                Please check whether you already have an account or enter the wrong Usename and Password.<br />
+                If you are not logged in, please follow the following steps:<br />
+                <b>Step 1:</b> Please go to the link <i style="color:cornflowerblue;">https://localhost:44316/Account/Register</i> to register an account<br />
+                <b>Step 2:</b> Fill in all the information on the form<br />
+                <b>Step 3:</b> Click register to create an account<br />
+                <b>Step 4:</b> Visit the login page to log in to your account<br />
+                If you already have an account but cannot log in, please contact us at 0121685741 for support.
+            </div>
+        </details>
     </div>
 
     <div class="col">
