--- a/eProject/Views/Shared/Partials/Header.cshtml
+++ b/eProject/Views/Shared/Partials/Header.cshtml
@@ -15,6 +15,9 @@
                 <a class="header-navItem" href="/">
                     Services
                 </a>
+                <a class="header-navItem" href="~/RetailStores/Index">
+                    Retails stores
+                </a>
             </nav>
 
             <nav class="header-userNav">
