Make simple service detail page

--- a/eProject/Content/App.css
+++ b/eProject/Content/App.css
@@ -87,6 +87,10 @@ body {
     margin-top: 16px;
 }
 
+.footer-lineLink:hover {
+    color: var(--primary);
+}
+
 .copyrightText {
     font-size: 1.6rem;
     color: #666;
