--- a/eProject/Views/Shared/Partials/Footer.cshtml
+++ b/eProject/Views/Shared/Partials/Footer.cshtml
@@ -29,7 +29,7 @@
                     <a class="footer-lineLink" href="~/Site/HowToOrderAService">
                         How to order a service
                     </a>
-                    <a class="footer-lineLink" href="nexusservice@("@")gmail.com">
+                    <a class="footer-lineLink" href="mailto:nexusservice@("@")gmail.com">
                         Contact us
                     </a>
                 </div>
