--- a/eProject/Views/Site/Index.cshtml
+++ b/eProject/Views/Site/Index.cshtml
@@ -53,7 +53,7 @@
                     <p class="serviceItem-deposit">
                         With a deposit of <span class="serviceItem-depositValue">325$</span>
                     </p>
-                    <a href="/" class="serviceItem-detailBtn">
+                    <a href="/Service/Detail" class="serviceItem-detailBtn">
                         View Detail
                         <i class="fa-solid fa-arrow-right"></i>
                     </a>
@@ -75,7 +75,7 @@
                     <p class="serviceItem-deposit">
                         With a deposit of <span class="serviceItem-depositValue">500$</span>
                     </p>
-                    <a href="/" class="serviceItem-detailBtn">
+                    <a href="/Service/Detail" class="serviceItem-detailBtn">
                         View Detail
                         <i class="fa-solid fa-arrow-right"></i>
                     </a>
@@ -97,7 +97,7 @@
                     <p class="serviceItem-deposit">
                         With a deposit of <span class="serviceItem-depositValue">250$</span>
                     </p>
-                    <a href="/" class="serviceItem-detailBtn">
+                    <a href="/Service/Detail" class="serviceItem-detailBtn">
                         View Detail
                         <i class="fa-solid fa-arrow-right"></i>
                     </a>
