Make service management page in admin side

--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -1,27 +1,11 @@
 ﻿<div class="sidebar">
     <h4 class="sidebar-heading">
-        Adminstrator Menu
+        <i class="fa-solid fa-bars-staggered"></i>
+        Management Menu
     </h4>
     <nav class="sidebar-menu">
-        <a class="sidebar-menuItem" href="/Admin">
-            <i class="fa-solid fa-headphones"></i>
-            Headphones
-        </a>
-        <a class="sidebar-menuItem" href="/Admin">
-            <i class="fa-solid fa-headphones"></i>
-            Headphones
-        </a>
-        <a class="sidebar-menuItem" href="/Admin">
-            <i class="fa-solid fa-headphones"></i>
-            Headphones
-        </a>
-        <a class="sidebar-menuItem" href="/Admin">
-            <i class="fa-solid fa-headphones"></i>
-            Headphones
-        </a>
-        <a class="sidebar-menuItem" href="/Admin">
-            <i class="fa-solid fa-headphones"></i>
-            Headphones
+        <a class="sidebar-menuItem" href="/Admin/Service">
+            Service management
         </a>
     </nav>
 </div>
