--- a/eProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -3,11 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus Admin |@ViewBag.Title</title>
+    <title>Nexus Admin | @ViewBag.Title</title>
     @* Bootstrap 5 *@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     @* Fontawesome *@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    @* Toast Message *@
+    <link rel="stylesheet" href="~/Content/Libraries/ToastMessage/ToastMessage.css" />
     @* Styles *@
     <link rel="stylesheet" href="~/Content/AdminApp.css" />
     @RenderSection("styles", required: false)
@@ -18,7 +20,7 @@
             Html.RenderPartial("~/Areas/Admin/Views/Shared/Partials/Header.cshtml");
         }
         <div class="content">
-            @{ 
+            @{
                 Html.RenderPartial("~/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml");
             }
             <div class="content-main">
@@ -27,11 +29,52 @@
         </div>
     </div>
 
+    <div id="toast"></div>
 
     @* BS5 *@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@("@")popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    @* Toast Message *@
+    <script src="~/Content/Libraries/ToastMessage/ToastMessage.js"></script>
+    @* JQuery *@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    @* Toast Handle *@
+    @try
+    {
+        if (TempData.ContainsKey("Error"))
+        {
+            <script>
+                toast({
+                    title: 'Error',
+                    message: '@TempData["Error"].ToString()',
+                    type: 'error'
+                })
+            </script>
+        }
+    }
+    catch (Exception e)
+    {
+        throw e;
+    }
+    @try
+    {
+        if (TempData.ContainsKey("Success"))
+        {
+            <script>
+                toast({
+                    title: 'Success',
+                    message: '@TempData["Success"].ToString()',
+                    type: 'success'
+                })
+            </script>
+        }
+    }
+    catch (Exception e)
+    {
+        throw e;
+    }
+    @RenderSection("toast", required: false)
     @* Scripts *@
     @RenderSection("scripts", required: false)
 </body>
