--- a/eProject/Content/AdminApp.css
+++ b/eProject/Content/AdminApp.css
@@ -8,6 +8,7 @@
     --header-height: 80px;
 
     --sidebar-width: 360px;
+    --bgcl-btn: #7fffd4;
 }
 
 * {
@@ -89,7 +90,7 @@ body {
 }
 
 .sidebar-heading {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 600;
     color: var(--grey);
     padding: 12px;
@@ -100,7 +101,7 @@ body {
 }
 
 .sidebar-menuItem {
-    padding: 12px 0 12px 18px;
+    padding: 12px 0 12px 22px;
     font-size: 1.6rem;
     display: block;
     text-decoration: none;
@@ -110,5 +111,14 @@ body {
 
 .sidebar-menuItem:hover {    
     color: var(--primary);
-    padding-left: 20px;
+    padding-left: 16px;
+}
+
+/* Content */
+.page-title {
+    padding-bottom: 12px;
+    margin-bottom: 0;
+    font-size: 2.4rem;
+    color: var(--grey);
+    border-bottom: 1px solid #555;
 }
