--- a/eProject/Content/Css/Service/Detail.css
+++ b/eProject/Content/Css/Service/Detail.css
@@ -68,6 +68,7 @@
     margin-top: 24px;
     box-shadow: 0 0 10px #55555588;
     border-radius: 8px;
+    transition: all ease-out .15s;
 }
 .paymentPlanItem.active {
     box-shadow: 0 0 15px #7fffd488;
@@ -95,6 +96,7 @@
     border: 1px solid #555;
     border-radius: 4px;
     cursor: pointer;
+    transition: all ease-out .15s;
 }
 .paymentPlanItem-childrenItem.active {
     border-color: var(--primary);
@@ -165,7 +167,7 @@
 .cardItem-headingName {
     font-size: 2rem;
     color: var(--white);
-    padding: 16px 4px;
+    padding: 16px 8px;
 }
 
 .cardItem-thumbnail {
@@ -175,7 +177,7 @@
 .cardItem-price {
     font-size: 1.6rem;
     color: var(--white);
-    padding: 16px 4px;
+    padding: 16px 8px;
 }
 
 .cardItem-detailBtn {
