--- a/eProject/Views/Shared/_Layout.cshtml
+++ b/eProject/Views/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     @* Toast Message *@
     <script src="~/Content/Libraries/ToastMessage/ToastMessage.js"></script>
+    @* JQuery *@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     @* Scripts *@
     @RenderSection("scripts", required: false)
 
