--- a/eProject/Views/RetailStores/Index.cshtml
+++ b/eProject/Views/RetailStores/Index.cshtml
@@ -7,15 +7,16 @@
 }
 
 <div class="container">
-    <h1 class="page-heading">
+    <h2 class="page-heading">
+        <i class="fa-solid fa-shop"></i>
         Retails Stores
-    </h1>
+    </h2>
     <div class="content-section">
         <div class="row">
             <div class="col-xl-4">
                 <div class="cardItem" href="/">
 
-                    <img class="cardItem-thumbnail" src="~/Content/ImageRetailsStore/vienthonga.jpg" alt="Thumbnail" />
+                    <img class="cardItem-thumbnail" src="~/Content/Images/ImageRetailsStore/vienthonga.jpg" alt="Thumbnail" />
                     <div class="cardItem-body">
                         <h3 class="cardItem-headingName">
                             <i class="fa-solid fa-store"></i>
@@ -37,7 +38,7 @@
 
             <div class="col-xl-4">
                 <div class="cardItem" href="/">
-                    <img class="cardItem-thumbnail" src="~/Content/ImageRetailsStore/vnpt.jpg" alt="Thumbnail" />
+                    <img class="cardItem-thumbnail" src="~/Content/Images/ImageRetailsStore/vnpt.jpg" alt="Thumbnail" />
                     <div class="cardItem-body">
                         <h3 class="cardItem-headingName">
                             <i class="fa-solid fa-store"></i>
@@ -59,7 +60,7 @@
 
             <div class="col-xl-4">
                 <div class="cardItem" href="/">
-                    <img class="cardItem-thumbnail" style="height: 307px;" src="~/Content/ImageRetailsStore/dangkhoi.jpg" alt="Thumbnail" />
+                    <img class="cardItem-thumbnail" style="height: 307px;" src="~/Content/Images/ImageRetailsStore/dangkhoi.jpg" alt="Thumbnail" />
                     <div class="cardItem-body">
                         <h3 class="cardItem-headingName">
                             <i class="fa-solid fa-store"></i>
