--- a/eProject/Views/Site/Faq.cshtml
+++ b/eProject/Views/Site/Faq.cshtml
@@ -8,110 +8,138 @@
 
 
 <div class="container">
-    <h2>Frequently Asked Questions</h2>
-    <div class="col">
-        <details>
-            <summary>
-                How can I use Voice Messages?
-            </summary>
-            <br />
-            <div>
-                You can do this to return phone messages in the following ways:
-                Leave a message after the beep in case subscriber A cannot call subscriber B B turns off the phone, the phone is busy or does not track the phone
-                Or call 0121685741 for more details.
-            </div>
-        </details>
+
+    <h2><i class="fa-solid fa-file-circle-question"></i> Frequently Asked Questions</h2>
+    <div class="content-one">
+        <div class="col">
+            <details>
+                <summary>
+                    How can I use Voice Messages?
+                </summary>
+                <br />
+                <div class="content-body">
+                    You can do this to return phone messages in the following ways:
+                    Leave a message after the beep in case subscriber A cannot call subscriber B B turns off the phone, the phone is busy or does not track the phone
+                    Or call 0121685741 for more details.
+                </div>
+            </details>
 
 
+        </div>
+
+        <div class="col">
+            <details>
+                <summary>
+                    Do you have promotions at the moment?
+                </summary>
+                <br />
+                <div class="content-body">
+                    Currently on Nexus we have 3 connection services: Dial – Up Connection, Broad Band Connection, LandLine Connection
+                    if 10-15 connections are taken, they will be getting a discount of 25% in the advance and as well in the security deposit. If it is between 15-25 connections, then they will avail 50% discount and for 25-50 then they can avail 75% discount and if it is above 50 they will avail 100% discount
+                </div>
+            </details>
+        </div>
+
+        <div class="col">
+            <details>
+                <summary>
+                    If I subscribe to Nexus service, how much service tax will I have to pay?
+                </summary>
+                <br />
+                <div class="content-body">
+                    The service tax is as per the government (12.24%) on the whole bill generated and will be charged to the customer.
+                </div>
+            </details>
+        </div>
+
+        <div class="col">
+            <details>
+                <summary>
+                    What is broadband connection?
+                </summary>
+                <br />
+                <div class="content-body">
+                    In telecommunications, broadband is the wide-bandwidth data transmission that transports multiple signals at a wide range of frequencies and Internet traffic types, which enables messages to be sent simultaneously and is used in fast internet connections.
+                </div>
+            </details>
+        </div>
+
+        <div class="col">
+            <details>
+                <summary>
+                    What is broadband connection?
+                </summary>
+                <br />
+                <div class="content-body">
+                    In telecommunications, broadband is the wide-bandwidth data transmission that transports multiple signals at a wide range of frequencies and Internet traffic types, which enables messages to be sent simultaneously and is used in fast internet connections.
+                </div>
+            </details>
+        </div>
+
+        <div class="col">
+            <details>
+                <summary>
+                    Why can't I sign in?
+                </summary>
+                <br />
+                <div class="content-body">
+                    Please check if you have been provided with a login account by Nexus or if you entered the wrong Phone Number and Password.<br />
+                    If you already have an account but cannot log in, please contact 0121685741 for support.
+                </div>
+            </details>
+        </div>
+
+        <div class="col">
+            <details>
+                <summary>
+                    To register for Nexus telecommunications service, can I go to Nexus transaction points to do the procedure?
+                </summary>
+                <br />
+                <div class="content-body">
+                    Yes, if you don't want to register for the online service yourself, you can go to any Nexus point of sale to register for the service.
+                </div>
+            </details>
+        </div>
+
+        <div class="col">
+            <details>
+                <summary>
+                    What service packages does Nexus currently offer?
+                </summary>
+                <br />
+   
+                <div class="content-body">
+                 There are three main types of connections: <br />
+                    (A) Dial – Up Connection : 325$ <br />
+                    (B) Broad Band Connection : 500$ <br />
+                    (C) LandLine Connection : 250$ <br />
+                    And there are other service packs, please visit the URL <i style="color: blue">https://localhost:44316/</i> for more details.
+                </div>
+            </details>
+        </div>
+
+        <div class="col">
+            <details>
+                <summary>
+                    How to check the feasibility of connecting the Dial - Up service package?
+                </summary>
+                <br />
+                <div class="content-body">
+                    For customers who have registered for Dial - Up connection, the feasibility test will be conducted for both landline phone and internet connection in case the customer registers both phone and internet connection and if customer is holding landline from same carrier and currently applies for internet connection then feasibility test is conducted for internet connection only. Feasibility testing will be conducted to test the distance as they consider the distance parameters to provide the connection, check the server availability, etc. according to the company's template.
+                </div>
+            </details>
+        </div>
+
+        <div class="col">
+
+        </div>
+
+        <div class="col">
+
+        </div>
+        <div class="col">
+
+        </div>
     </div>
-
-    <div class="col">
-        <details>
-            <summary>
-                Do you have promotions at the moment?
-            </summary>
-            <br />
-            <div>
-                Currently on Nexus we have 3 connection services: Dial – Up Connection, Broad Band Connection, LandLine Connection
-                if 10-15 connections are taken, they will be getting a discount of 25% in the advance and as well in the security deposit. If it is between 15-25 connections, then they will avail 50% discount and for 25-50 then they can avail 75% discount and if it is above 50 they will avail 100% discount
-            </div>
-        </details>
-    </div>
-
-    <div class="col">
-        <details>
-            <summary>
-                If I subscribe to Nexus service, how much service tax will I have to pay?
-            </summary>
-            <br />
-            <div>
-                The service tax is as per the government (12.24%) on the whole bill generated and will be charged to the customer.
-            </div>
-        </details>
-    </div>
-
-    <div class="col">
-        <details>
-            <summary>
-                What is broadband connection?
-            </summary>
-            <br />
-            <div>
-                In telecommunications, broadband is the wide-bandwidth data transmission that transports multiple signals at a wide range of frequencies and Internet traffic types, which enables messages to be sent simultaneously and is used in fast internet connections.
-            </div>
-        </details>
-    </div>
-
-    <div class="col">
-        <details>
-            <summary>
-                What is broadband connection?
-            </summary>
-            <br />
-            <div>
-                In telecommunications, broadband is the wide-bandwidth data transmission that transports multiple signals at a wide range of frequencies and Internet traffic types, which enables messages to be sent simultaneously and is used in fast internet connections.
-            </div>
-        </details>
-    </div>
-
-    <div class="col">
-        <details>
-            <summary>
-                Why can't I sign in?
-            </summary>
-            <br />
-            <div>
-                Please check whether you already have an account or enter the wrong Usename and Password.<br />
-                If you are not logged in, please follow the following steps:<br />
-                <b>Step 1:</b> Please go to the link <i style="color:cornflowerblue;">https://localhost:44316/Account/Register</i> to register an account<br />
-                <b>Step 2:</b> Fill in all the information on the form<br />
-                <b>Step 3:</b> Click register to create an account<br />
-                <b>Step 4:</b> Visit the login page to log in to your account<br />
-                If you already have an account but cannot log in, please contact us at 0121685741 for support.
-            </div>
-        </details>
-    </div>
-
-    <div class="col">
-
-    </div>
-
-    <div class="col">
-
-    </div>
-
-    <div class="col">
-
-    </div>
-
-    <div class="col">
-
-    </div>
-
-    <div class="col">
-
-    </div>
-    <div class="col">
-
-    </div>
+    
 </div>
