--- a/eProject/Content/Css/Site/Faq.css
+++ b/eProject/Content/Css/Site/Faq.css
@@ -8,8 +8,21 @@
     display: block;
 }
 
-div {
+.content-body {
     text-indent: 2rem;
     padding: inherit;
-    padding-left: 4rem;
+    padding-left: 3rem;
+    border: 1px solid white;
+    margin-left: 32px;
+    border-radius: 6px;
+}
+
+.content-one {
+    padding-left: 2rem;
+}
+
+h2{
+    font-size: 2.8rem;
+    margin-bottom: 32px;
+    color: #ccc;
 }
