--- a/eProject/Views/Site/Index.cshtml
+++ b/eProject/Views/Site/Index.cshtml
@@ -117,74 +117,52 @@
                 <div class="col-xl-6">
                     <div class="reasonItem">
                         <i class="fa-regular fa-square-check"></i>
-                        This is reason item
+                        Flexibility when working remotely thanks to telecommunications services
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="reasonItem">
                         <i class="fa-regular fa-square-check"></i>
-                        This is reason item
+                        Nexus is ready to serve customers 24/7
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="reasonItem">
                         <i class="fa-regular fa-square-check"></i>
-                        This is reason item
+                        Support development and improve productivity in business through telecommunications
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="reasonItem">
                         <i class="fa-regular fa-square-check"></i>
-                        This is reason item
+                        Nexus has always cared about customer experience
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="reasonItem">
                         <i class="fa-regular fa-square-check"></i>
-                        This is reason item
+                        Always respect, listen to customers to change and serve the most perfect product, service
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="reasonItem">
                         <i class="fa-regular fa-square-check"></i>
-                        This is reason item
+                        Develop and adapt quickly to the new technology era 4.0
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="reasonItem">
                         <i class="fa-regular fa-square-check"></i>
-                        This is reason item
+                        Telecommunications services bring the most advanced communication methods to customers
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="reasonItem">
                         <i class="fa-regular fa-square-check"></i>
-                        This is reason item
+                        Flexible and diverse pricing policy suitable for all customers
                     </div>
                 </div>
-                <div class="col-xl-6">
-                    <div class="reasonItem">
-                        <i class="fa-regular fa-square-check"></i>
-                        This is reason item
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="reasonItem">
-                        <i class="fa-regular fa-square-check"></i>
-                        This is reason item
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="reasonItem">
-                        <i class="fa-regular fa-square-check"></i>
-                        This is reason item
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="reasonItem">
-                        <i class="fa-regular fa-square-check"></i>
-                        This is reason item
-                    </div>
+               
                 </div>
             </div>
         </div>
