--- a/eProject/Content/Css/Site/Index.css
+++ b/eProject/Content/Css/Site/Index.css
@@ -141,10 +141,14 @@
     font-size: 1.6rem;
     font-weight: 300;
     margin-top: 16px;
-    text-align: center;
+    text-align: left;
 }
 
 .reasonItem i {
     color: #a4c639;
     margin-right: 8px;
+}
+
+.row{
+    margin-left: 8px;
 }
