Done Service manage and filter

--- a/eProject/Areas/Admin/Views/Shared/Partials/Header.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Header.cshtml
@@ -11,10 +11,8 @@
 
             <nav class="header-nav">
                 <a class="header-navItem" href="/">
-                    Employee Profile
-                </a>
-                <a class="header-navItem" href="/">
-                    Logout
+                    <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                    Sign Out
                 </a>
             </nav>
         </div>
