--- a/eProject/Areas/Admin/Views/Service/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Service/Index.cshtml
@@ -5,6 +5,17 @@
 @section styles {
     <link rel="stylesheet" href="~/Content/Css/AdminCss/Service/Index.css" />
 }
+@section scripts {
+    <script>
+        $(function () {
+            $("#deleteServiceBtn").click(function (e) {
+                if (!confirm("Are you sure you want to delete this service")) {
+                    e.preventDefault();
+                }
+            })
+        })
+    </script>
+}
 
 <h1 class="page-title">
     Service Management
@@ -14,10 +25,15 @@
         <i class="fa-solid fa-plus"></i>
         Add new service
     </a>
-    <a class="topNav-btnItem" href="/Admin/Service/Add">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        Search
-    </a>
+    <div class="topNav-search">
+        @using(Html.BeginForm("Search", "Service", new { area = "Admin" }, FormMethod.Post, new { @class = "searchForm" }))
+        {
+            <input class="searchForm-input" name="keyword" placeholder="Enter service name" />
+            <button class="searchForm-btn">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+        }
+    </div>
 </nav>
 <div class="dataBox">
     <h3 class="dataBox-heading">
@@ -48,7 +64,7 @@
                             <a class="serviceItem-action" href="/Admin/Service/Edit?serviceID=@service.ServiceID">
                                 Edit
                             </a>
-                            <a class="serviceItem-action dlt" href="/Admin/Service/Detail">
+                            <a class="serviceItem-action dlt" id="deleteServiceBtn" href="/Admin/Service/Delete?serviceID=@service.ServiceID">
                                 Delete
                             </a>
                         </div>
@@ -58,4 +74,3 @@
         }
     </div>
 </div>
-
