--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -7,5 +7,8 @@
         <a class="sidebar-menuItem" href="/Admin/Service">
             Service management
         </a>
+        <a class="sidebar-menuItem" href="/Admin/Contact">
+            Contact management
+        </a>
     </nav>
 </div>
