Done 75% employee management
add, edit, change password, delete, search

--- a/eProject/Areas/Admin/Views/Service/Add.cshtml
+++ b/eProject/Areas/Admin/Views/Service/Add.cshtml
@@ -1,6 +1,6 @@
 ﻿@model eProject.Models.Service
 @{
-    ViewBag.Title = "Add";
+    ViewBag.Title = "Add new service";
 }
 @section styles {
     <link rel="stylesheet" href="~/Content/Css/AdminCss/Service/Add.css" />
