--- a/eProject/Areas/Admin/Views/Shared/Partials/Header.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Header.cshtml
@@ -10,6 +10,10 @@
             </a>
 
             <nav class="header-nav">
+                <a class="header-navItem" href="/Admin/Employee/MyProfile">
+                    <i class="fa-solid fa-address-card"></i>
+                    My Profile
+                </a>
                 <a class="header-navItem" href="/Admin/Employee/SignOut">
                     <i class="fa-solid fa-arrow-right-to-bracket"></i>
                     Sign Out
